--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,13 @@ jobs:
       - checkout
       - run:
           name: Install npm
-          command: npm install
+          command: yarn install
       - run:
           name: Auth With NPM
           command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > .npmrc
+      - run:
+          name: Install typescript
+          command: npm install -g typescript
       - run:
           name: Publish to NPM
           command: npm publish
