--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
       - run:
           name: Install typescript
-          command: npm install -g typescript
+          command: npm install --save-dev typescript
       - run:
           name: Install npm
           command: npm install
